# acoustok

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
acoustok/: __init__.py  bandwidth.py  cli.py  codec.py  config.py  functional.py  io.py  token_utils.py  tokenizer.py  utils.py
acoustok/modules/: __init__.py  activations.py  conv.py  seanet.py
acoustok/quantization/: __init__.py  distrib.py  residual_vq.py  vq.py
benchmarks/: README.md  bench_rvq.py
docs/: README.md  api-reference.md  architecture.md  design-notes.md  usage.md
examples/: 01_quickstart.py  02_round_trip_wav.py  03_bandwidth_sweep.py  04_tokens_for_lm.py  README.md
scripts/: check.sh  make_demo_audio.py
tests/: conftest.py  test_bandwidth.py  test_cli.py  test_codec.py  test_config.py  test_conv.py  test_functional.py  test_io.py  test_residual_vq.py  test_seanet.py  test_token_utils.py  test_tokenizer.py  test_utils.py  test_vq.py
