[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "acoustok"
dynamic = ["version"]
description = "Neural audio codec and tokenizer for audio language models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Qu Wang" }]
dependencies = [
    "torch>=2.0",
    "numpy>=1.21",
]

[tool.hatch.version]
path = "acoustok/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["acoustok"]
